[package]
name = "qentities"
version = "0.1.0-alpha"
edition = "2021"
description = "A Rust crate featuring utilities related to the q-entities format."
repository = "https://github.com/IanE9/qentities"
keywords = ["parser"]

[dependencies.bitflags]
version = "2.3.3"

[dependencies.bstr]
version = "1.6.0"

[dependencies.hashbrown]
version = "0.14.0"
features = ["raw"]

[dev-dependencies.rustc-hash]
version = "1.1.0"
