[package]
name = "qentities"
version = "0.2.1"
edition = "2021"
description = "Utilities related to the q-entities format."
repository = "https://github.com/IanE9/qentities"
license = "MPL-2.0"
keywords = ["parser"]

[dependencies.bitflags]
version = "2.3.3"

[dependencies.bstr]
version = "1.6.0"

[dependencies.deepsize]
version = "0.2.0"
optional = true

[dependencies.hashbrown]
version = "0.14.0"

[dev-dependencies.rustc-hash]
version = "1.1.0"
